Fixed the bug where the splash svg text appeared to be chopped off on the sides and that it dynamically channged with window resizing: the problem was the video did not resize to fit it.. solution text 80% video 100% width; worked on About me photo section; Needs work on centering and fixing misalignments...; NOTE TO SELF: horrible hack !important was used with css pertaining to the AboutMe component to deal with bootstrap...; TL;DR; Fixed a bug, potentially made a new one in AboutMe

--- a/src/AboutMe/AboutMe.scss
+++ b/src/AboutMe/AboutMe.scss
@@ -1,3 +1,32 @@
 .AboutMe{
     background-color: #161616;
+    margin-left: 0px !important; //because bootstrap
+    margin-right: 0px !important; //because bootstrap
+}
+.AboutMe-Photo-container{
+    padding: 20px;
+}
+
+#AboutMe-c{
+    padding-right:0px;
+}
+.AboutMe-Photo{
+    border-radius: 100%;
+    border: 5px solid white;
+    width: 65%;
+    height:auto;
+    margin:auto;
+    left:50%;
+    top:50%;
+}
+
+.AboutMe-Quote{
+    color: white;
+    padding:15px;
+    font-size:1em;
+}
+
+.AboutMe-BigQuotes{
+    font-size: 5em;
+    font-weight: 400;
 }
